src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwP0.25-dhF500.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 320 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
