src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwP0.25-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 312 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 312 × 352, bounds: 1272 × 712, states: []
size: 312 × 352, bounds: 1272 × 712, states: [Activated]
